# ffmpreg

./: Cargo.toml  readme.md
src/: lib.rs  main.rs
src/cli/: args.rs  pipeline.rs
src/codecs/: mod.rs
src/codecs/adpcm/: decode.rs  encode.rs  ms.rs
src/codecs/flac/: decode.rs  encode.rs
src/codecs/g711/: alaw.rs  ulaw.rs
src/codecs/mp3/: decode.rs  header.rs  sideinfo.rs
src/codecs/pcm/: decode.rs  encode.rs
src/codecs/rawvideo/: decode.rs  encode.rs
src/codecs/vorbis/: decode.rs
src/container/: mod.rs
src/container/wav/: mod.rs  read.rs  write.rs
src/container/y4m/: read.rs
src/core/: packet.rs
src/io/: reader.rs  seek.rs
src/show/: analyze.rs  mod.rs
src/transform/: channel_mixer.rs  eq.rs  fade.rs  gain.rs  highpass.rs  lowpass.rs  normalize.rs  peak_limiter.rs  resample.rs  rms_limiter.rs  volume.rs
src/transform/video/: blur.rs  brightness.rs  contrast.rs  crop.rs  flip.rs  pad.rs  rotate.rs  scale.rs
tests/: io_pipeline.rs
tests/codecs/: mod.rs
tests/container/: mod.rs  roundtrip.rs
